--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
   <h1>Hello, World</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore maxime reiciendis deserunt dolor repudiandae sequi odio architecto, quaerat saepe veritatis?</p>
 </body>
 </html>
