--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
   <h1>Hello, World</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore maxime reiciendis deserunt dolor repudiandae sequi odio architecto, quaerat saepe veritatis?</p>
+<!--   h2 -->
+  <h2>This is heading two</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore maxime reiciendis deserunt dolor repudiandae sequi odio architecto, quaerat saepe veritatis?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore maxime reiciendis deserunt dolor repudiandae sequi odio architecto, quaerat saepe veritatis?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore maxime reiciendis deserunt dolor repudiandae sequi odio architecto, quaerat saepe veritatis?</p>
 </body>
 </html>
