Move style properties

--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    body{
+      background-color: aliceblue;
+      font-family: Arial, Helvetica, sans-serif;
+      text-align: center;
+    }
+
+    h1{
+      color: blue;
+    }
+
+    p{
+      background: #aaa;
+      padding: 15px;
+      border: 2px solid black;
+      border-radius: 20px;
+      margin: 5px;
+    }
+
+  </style>
 </head>
 <body>
-  <h1 style="color:red;">Hello, World!</h1>
+  <h1>Hello, World!</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore maxime reiciendis deserunt dolor repudiandae sequi odio architecto, quaerat saepe veritatis?</p>
 <!--   h2 -->
   <h2>This is heading two</h2>
